[workspace]
members = ["contracts/*"]


[profile.release.package.cw20]
codegen-units = 1
incremental = false

[profile.release.package.nft-marketplace]
codegen-units = 1
incremental = false

[profile.release.package.nft]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
